[package]
name = "voltlane-server"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Voltlane server-side library to communicate with the standard Voltlane TCP reverse proxy."
repository = "https://github.com/voltlane/server"
homepage = "https://voltlane.net"

[dependencies]
anyhow = "1.0.98"
voltlane-net = "0.1.0"
thiserror = "2.0.12"
tokio = "1.44.2"
