[package]
name = "connserver"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["full"] }

[profile.release-with-debug]
inherits = "release"
opt-level = 3
debug = true
lto = true
panic = "abort"
