[package]
name = "connserver"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["full"] }
net = { path = "../net" }
enc = { path = "../enc" }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"

[profile.release-with-debug]
inherits = "release"
opt-level = 3
debug = true
lto = true
panic = "abort"
